# market-data-bot

./: Cargo.toml  README.md
src/: main.rs
src/plotter/: plotter.rs
src/quote/: quote.rs
src/timeseries/: client.rs  client_test.rs  mod.rs
