[package]
name = "market-data-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
chrono = "0.4.38"
plotters = "0.3.6"
uuid = { version = "1.10.0", features = ["v4"] }
