[package]
name = "market-data-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde_json = "1.0.120"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
chrono = "0.4.38"
plotters = "0.3.6"
teloxide = { version = "0.12.0", features= ["macros"]}
uuid = { version = "1.10.0", features = ["v4"] }
log = "0.4.22"
pretty_env_logger = "0.4"
image = { version = "0.24", features = ["png"] }